--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Musical notation'
 - !lcsh 'Music -- Terminology'
 - !lcc 'MT'
+- GITenberg
 title: Music Notation and Terminology
 url: http://www.gutenberg.org/ebooks/19499
